Fixed Ugly Letter Spacing

--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -69,6 +69,7 @@
   font-family: "Domine", serif;
   font-size: clamp(0.65rem, 0.4vw + 0.5rem, 0.875rem);
   line-height: 1.5;
+  letter-spacing: normal;
 }
 
 .blog-route .blog-route-tags {
